--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,163 @@
-h1 {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+body {
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+h2 {
+    font-size: 1.7rem;
+    font-weight: 900;
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+
+header {
+    box-shadow: 0 1px 10px -3px grey;
+    position: relative;
+    /* z-index: 2; */
+}
+
+header img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5rem 0;
+}
+
+/* #location-explore div {
+    font-family: 'Shrikhand', cursive;
+    font-family: 'Roboto', sans-serif;
+} */
+
+#location-explore div:first-child {
+    background-color: #EAEAEA;
+    height: 50px;
+    font-size: 1.1rem;
+}
+
+#location-explore i {
+    margin-right: 15px;
+}
+
+#location, #explore {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#explore {
+    flex-direction: column;
+    text-align: center;
+    /* height: 300px; */
+    background-color: #F6F6F6;
+    padding: 2rem 0;
+}
+
+#explore h2 {
+    padding: 2rem 3rem;
+}
+
+#explore p {
+    font-size: 1.2rem;
+    font-weight: lighter;
+    /* color: #353535aa; */
+    padding: 0 2rem 2rem 2rem;
+}
+
+#explore button {
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 50px;
+    background: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);
+    color: #FFF;
+    font-size: 1.1rem;
+    font-weight: bold;
+    height: 60px;
+    width: 70vw;
+    /* filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1)); */
+}
+
+#fonctionnement, #restaurants {
+    padding: 4rem 1.5rem
+}
+
+#fonctionnement-cards {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#fonctionnement-cards .card {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    margin: 2rem 0 0 0;
+    border-radius: 20px;
+    background-color: #F6F6F6;
+    font-size: 1.2rem;
+}
+
+.card i {
+    padding: 30px;
+}
+
+#restaurants {
+    background-color: #F6F6F6;
+}
+
+#restaurants-cards .card {
+    border-radius: 20px;
+    margin-top: 1rem;
+}
+
+#restaurants-cards img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+#restaurants-cards .card-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #FFF;
+    padding: 1rem 1.7rem 1rem 1rem;
+    font-size: 1.2rem;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+#restaurants-cards .card-content p:first-child {
+    font-weight: bold;
+    margin-bottom: 0.4rem;
+}
+
+#restaurants-cards .card-content p:nth-child(2) {
+    font-weight: lighter;
+}
+
+#restaurants-cards i {
+    padding: 0;
+    font-size: 1.5rem;
+}
+
+footer {
+    height: 500px;
+    background-color: #353535;
+    color: #FFF;
+    padding: 1.5rem;
+}
+
+footer div {
+    display: flex;
 }
