--- a/assets/styles.css
+++ b/assets/styles.css
@@ -149,6 +149,11 @@ header img {
     position: relative;
 }
 
+#restaurants-cards .card a {
+    text-decoration: none;
+    color: #000;
+}
+
 #restaurants-cards img {
     width: 100%;
     height: 200px;
@@ -250,8 +255,86 @@ footer p {
 }
 
 @media (min-width: 767.98px) {
-    /* *{
-        background-color: red;
+    #explore h2 {
+        font-size: 2rem;
+        padding-top: 0;
+    }
+
+    #explore button {
+        width: 16%;
+    }
+
+    #fonctionnement {
+        padding-left: 15rem;
+        padding-right: 15rem;
+    }
+
+    #fonctionnement-cards {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    #fonctionnement-cards .card {
+        width: 50%;
+        margin-right: 3rem;
+    }
+
+    #fonctionnement-cards .card:nth-child(3) {
+        margin-right: 0;
+    }
+
+    #restaurants {
+        padding-left: 15rem;
+        padding-right: 15rem;
+    }
+
+    /* pourquoi besoin de repréciser display flex ici et pas pour #fonctionnement-cards ? */
+    #restaurants-cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    #restaurants-cards .card {
+        width: 47%;
+    }
+
+    #restaurants-cards .card:first-child {
+        margin-bottom: 2rem;
+    }
+
+    footer {
+        display: inline-flex;
+        width: 100vw;
+        height: 5rem;
+        position: relative;
+        padding-right: 0;
+        padding-left: 0;
+        align-items: end;
+    }
+
+    footer svg {
+        position: absolute;
+        right: 3rem;
+        padding-top: 2rem;
+    }
+
+    footer div, footer p {
+        margin-top: 2rem;
+        margin-right: 2rem;
+    }
+
+    footer p:nth-child(1),
+    footer p:nth-child(2) {
+        margin-top: 0
+    }
+
+    footer .fa-utensils {
+        margin-left: 40vw;
+    }
+
+    /* footer div i:first-child {
+        margin-left: 15rem;
     } */
-    
+
 }
