--- a/assets/styles-pages.css
+++ b/assets/styles-pages.css
@@ -1,3 +1,14 @@
+header {
+    /* display: flex; */
+    position: relative;
+}
+
+header i {
+    position: absolute;
+    padding: 1.5rem 0 0 1.5rem;
+    font-size: 2rem;
+}
+
 #restaurant {
     display: flex;
     flex-direction: column;
@@ -137,10 +148,45 @@ h4 {
 
 footer {
     position: relative;
-    z-index: 1;
-    background-color: red;
+    /* z-index: 1; */
     /* bottom: 0;
     width: 100%;
     z-index: 9999;
      */
+}
+
+@media (min-width: 767.98px) {
+    #restaurant img {
+        width: 100%;
+        height:400px;
+        object-fit: cover;
+        /* align-items: center; */
+        /* height:100px; */
+        /* object-fit: cover; */
+    }
+
+    #restaurant-title {
+        justify-content: center;
+    }
+
+    #restaurant-title svg {
+        padding-left: 1.5rem;
+    }
+
+    #restaurant > div {
+        width: 70%;
+    }
+
+    #restaurant-cards .card {
+        width: 60%;
+    }
+
+    h4 {
+        margin-left: 20%;
+    }
+
+    #btn button {
+        width: 200px;
+    }
+
 }
