--- a/assets/styles-pages.css
+++ b/assets/styles-pages.css
@@ -1,12 +1,21 @@
 header {
-    /* display: flex; */
     position: relative;
 }
 
 header i {
     position: absolute;
-    padding: 1.5rem 0 0 1.5rem;
-    font-size: 2rem;
+    padding: 1.7rem 0 0 1.5rem;
+    font-size: 1.5rem;
+}
+
+.relative {
+    display: flex;
+    align-items: center;
+    margin-left: 1rem;
+}
+
+button {
+    cursor: pointer;
 }
 
 #restaurant {
@@ -20,9 +29,6 @@ header i {
     width: 100%;
     height:300px;
     object-fit: cover;
-    /* align-items: center; */
-    /* height:100px; */
-    /* object-fit: cover; */
 }
 
 #restaurant > div {
@@ -30,22 +36,36 @@ header i {
     background-color: #F6F6F6;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
-    /* position: absolute; */
-    /* problème width */
     width: 95%;
     margin-top: -3rem;
-    /* top: 16rem; */
-    /* z-index: 2; */
 }
 
 #restaurant-title {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
+    padding-right: 35px;
 }
 
-#restaurant-title svg {
-    margin-right: 1.7rem;
+#restaurant-title .fa-heart {
+    position: absolute;
+    /* right: 5px; */
+    font-size: 1.5rem;
+    transition: all 0.2s ease-out;
+}
+
+#restaurant-title .fa-solid {
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    opacity: 0;
+    background-image: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);
+}
+
+#restaurant-title .fa-solid:hover {
+    opacity: 1;
+    cursor: pointer;
 }
 
 h1 {
@@ -77,16 +97,46 @@ h4 {
     align-items: center;
     width: 95%;
     height: 70px;
-    /* margin: 2rem 0 0 0; */
     border-radius: 20px;
     background-color: #FFF;
     font-size: 1.2rem;
     box-shadow: 0px 4px 15px 0px #00000026;
     padding-left: 1rem;
-    /* padding-top: 0.5rem; */
-    /* padding-bottom: 0.5rem; */
     margin-top: 1rem;
 }
+
+.card {
+    opacity: 0;
+    animation: fade-in 0.5s ease-in-out forwards;
+  }
+  
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .card:nth-child(1) {
+    animation-delay: 0.2s;
+  }
+  
+  .card:nth-child(2) {
+    animation-delay: 0.4s;
+  }
+  
+  .card:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+
+  .card:nth-child(4) {
+    animation-delay: 0.8s;
+  }
+  
 
 #restaurant-cards .card:first-child {
     margin-top: 0;
@@ -94,8 +144,6 @@ h4 {
 
 #restaurant-cards .card div p {
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 #restaurant-cards .card div p:first-child {
@@ -115,10 +163,12 @@ h4 {
 }
 
 #restaurant button {
+    position: absolute;
+    bottom: 2rem;
     margin-bottom: 2rem;
     border: none;
     border-radius: 50px;
-    background: linear-gradient(to top, #c471f5 0%, #fa71cd 100%);
+    background: linear-gradient(to top, #9356DC -11.44%, #FF79DA 123.93%);
     color: #FFF;
     font-size: 1.1rem;
     font-weight: bold;
@@ -126,30 +176,38 @@ h4 {
     width: 70vw;
     /* filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1)); */
     box-shadow: 0px 4px 10px 0px #00000049;
-    /* transition: all .2s ease; */
+    transition: all 0.5s ease;
 }
 
-#restaurant button:hover {
+#restaurant .btn2 {
     background: linear-gradient(to top, #cf81fc 0%, #fc87d5 100%);
+    opacity: 0;
+}
+
+#restaurant .btn2:hover {
+    opacity: 1;
+}
+
+/* #restaurant button:hover {
+    background: linear-gradient(to top, #cf81fc 0%, #fc87d5 100%);
+    box-shadow: 0px 6px 15px 0px #00000049;
+
 }
 
 #restaurant button:active {
     background: linear-gradient(to top, #cf81fc 0%, #fc87d5 100%);
-}
+    box-shadow: 0px 6px 15px 0px #00000049;
+} */
 
 #btn {
     display: flex;
     justify-content: center;
-    margin-top: 3rem;
+    margin-top: 10rem;
 }
 
 #btn button {
     width: 50vw;
 }
-
-/* #restaurant-cards .card > p:nth-child(1) {
-    background-color: red;
-} */
 
 .card {
     overflow: hidden;
@@ -166,12 +224,17 @@ h4 {
     }
 }
 
+.card:hover p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 13rem;
+}
+
 .check {
     background-color: #99E2D0;
 }
 
 .check i {
-    /* height: 70px; */
     padding: 30px 20px;
 }
 
@@ -194,25 +257,18 @@ footer {
         width: 100%;
         height:400px;
         object-fit: cover;
-        /* align-items: center; */
-        /* height:100px; */
-        /* object-fit: cover; */
     }
 
     #restaurant-title {
         justify-content: center;
     }
 
-    #restaurant-title svg {
-        padding-left: 1.5rem;
+    .card:hover p {
+        max-width: 100%;
     }
 
     #restaurant > div {
         width: 70%;
-    }
-
-    #restaurant-cards .card {
-        width: 60%;
     }
 
     h4 {
@@ -222,5 +278,13 @@ footer {
     #btn button {
         width: 200px;
     }
+}
 
+@media (min-width: 1025px) {
+
+    #restaurant-cards .card {
+        width: 60%;
+    }
+
+  
 }
