--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
+@import '../base';
+@import '../components/';
 
 %flex-center {
     display: flex;
@@ -10,11 +10,7 @@
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
-}
-
-button {
-    cursor: pointer;
-}
+} 
 
 #loader-container {
     @extend %flex-center;
@@ -69,18 +65,6 @@ p {
   margin: 0;
 }
 
-header {
-  box-shadow: 0 1px 10px -3px grey;
-  position: relative;
-
-  img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1.5rem 0;
-  }
-}
-
 #location-explore {
     form {
         background-color: #eaeaea;
@@ -124,19 +108,7 @@ header {
   }
 
   button {
-    position: absolute;
     bottom: 1rem;
-    margin-bottom: 2rem;
-    border: none;
-    border-radius: 50px;
-    background: linear-gradient(to top, #9356DC -11.44%, #FF79DA 123.93%);
-    color: #fff;
-    font-size: 1.1rem;
-    font-weight: bold;
-    height: 60px;
-    width: 70vw;
-    box-shadow: 0px 4px 10px 0px #00000049;
-    transition: all 0.5s ease;
 }
 
 .btn2 {
@@ -166,7 +138,7 @@ header {
     margin: 2rem 0 0 0;
     border-radius: 20px;
     background-color: #f6f6f6;
-    font-size: 1.2rem;
+    font-size: 1rem;
     box-shadow: 0px 4px 15px 0px #00000026;
     position: relative;
     cursor: pointer;
@@ -228,12 +200,14 @@ header {
         border-bottom-left-radius: 20px;
         border-bottom-right-radius: 20px;
 
+        h3 {
+          &:first-child {
+            font-weight: bold;
+            font-size: 1.2rem;
+            margin: 0 0 0.4rem 0;
+          }
+        }
         p {
-            &:first-child {
-                font-weight: bold;
-                margin-bottom: 0.4rem;
-              }
-
             &:nth-child(2) {
                 font-weight: lighter;
               }
@@ -282,35 +256,6 @@ header {
   top: 0;
   right: 0;
   margin: 1rem;
-}
-
-footer {
-  background-color: #353535;
-  color: #fff;
-  padding: 1.5rem;
-
-  svg {
-    width: 100px;
-    margin-bottom: 0.5rem;
-  }
-
-  div {
-    display: flex;
-  }
-
-  i {
-    margin-right: 1.2rem;
-    width: 10px;
-  }
-
-  p {
-    margin-bottom: 0.5rem;
-  }
-
-  a {
-    text-decoration: none;
-    color: inherit;
-}
 }
 
 @media (min-width: 767.98px) {
@@ -377,35 +322,4 @@ footer {
             margin-bottom: 2rem;
           }
       }
-            
-      footer {
-        display: inline-flex;
-        width: 100vw;
-        height: 5rem;
-        position: relative;
-        padding-right: 0;
-        padding-left: 0;
-        align-items: end;
-
-        svg {
-            position: absolute;
-            right: 3rem;
-            padding-top: 2rem;
-          }
-
-        .fa-utensils {
-            margin-left: 40vw;
-          }  
-      } 
-    
-      footer div,
-      footer p {
-        margin-top: 2rem;
-        margin-right: 2rem;
-      }
-    
-      footer p:nth-child(1),
-      footer p:nth-child(2) {
-        margin-top: 0;
-      } 
 }
