--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -29,10 +29,6 @@ h4 {
     margin-left: 1rem;
 }
 
-button {
-    cursor: pointer;
-}
-
 #restaurant {
     display: flex;
     flex-direction: column;
@@ -55,19 +51,7 @@ button {
     }
 
     button {
-        position: absolute;
         bottom: 2rem;
-        margin-bottom: 2rem;
-        border: none;
-        border-radius: 50px;
-        background: linear-gradient(to top, #9356DC -11.44%, #FF79DA 123.93%);
-        color: #FFF;
-        font-size: 1.1rem;
-        font-weight: bold;
-        height: 60px;
-        width: 70vw;
-        box-shadow: 0px 4px 10px 0px #00000049;
-        transition: all 0.5s ease;
     }
 
     .btn2 {
@@ -107,7 +91,7 @@ button {
     }
 }
 
-#restaurant-cards {
+.restaurant-cards {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -145,16 +129,16 @@ button {
             margin-top: 0;
         }
 
-        div p {
+        div {
             white-space: nowrap;
 
-            &:first-child {
+            h3, .price {
                 font-weight: bold;
                 font-size: 1.2rem;
-                margin-bottom: 0.3rem;
+                margin: 0 0 0.3rem 0;
             }
 
-            &:nth-child(2) {
+            p {
                 font-weight: lighter;
                 font-size: 1rem;
             }
@@ -189,7 +173,7 @@ button {
     animation-delay: 0.8s;
   }
   
-#restaurant-cards .price {
+.restaurant-cards .price {
     padding-right: 1rem;
     padding-top: 2rem;
 }
@@ -256,7 +240,7 @@ footer {
 }
 
 @media (min-width: 1025px) {
-    #restaurant-cards .card {
+    .restaurant-cards .card {
         width: 60%;
     }  
 }
