fix tablet h4 margin

--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -231,7 +231,7 @@ footer {
     }
 
     h4 {
-        margin-left: 20%;
+        margin-left: 1rem;
     }
 
     #btn button {
@@ -243,4 +243,8 @@ footer {
     .restaurant-cards .card {
         width: 60%;
     }  
+
+    h4 {
+        margin-left: 20%;
+    }
 }
