add contact link, placeholder and h3 ellipsis

--- a/sass/pages/restaurants.scss
+++ b/sass/pages/restaurants.scss
@@ -119,7 +119,7 @@ h4 {
             margin-right: 0;
         }
 
-        &:hover p {
+        &:hover p, &:hover h3 {
             overflow: hidden;
             text-overflow: ellipsis;
             max-width: 13rem;
